--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "autoprefixer": "10.4.14",
+    "framer-motion": "^10.12.17",
     "graphql": "^16.6.0",
     "graphql-request": "^6.0.0",
     "html-react-parser": "^3.0.16",
